# ccmsg

./: CLAUDE.md  Cargo.toml  README.md
.claude/skills/shipping-local/: SKILL.md
skills/ccmsg/: SKILL.md
skills/ccmsg-listing-peers/: SKILL.md
skills/ccmsg-sending/: SKILL.md
src/: cli.rs  db.rs  main.rs  models.rs
src/commands/: hook_session_start.rs  hooks.rs  inbox.rs  install.rs  list.rs  mod.rs  reset.rs  send.rs  uninstall.rs  wait.rs
tests/: db_test.rs  hook_test.rs  hooks_settings_test.rs  integration_test.rs
